# napari-rf-classification

./: setup.cfg
.github/workflows/: test_and_deploy.yml
napari_rf_classification/: __init__.py  _api.py  _dock_widget.py  _function.py  _utilities.py
