[metadata]
name = napari-rf-classification
license = BSD-3
description = Pixel and label classification using sklearn Random Forest Classifiers
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    Framework :: napari
    Topic :: Scientific/Engineering :: Image Processing
    Topic :: Scientific/Engineering :: Information Analysis
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Operating System :: OS Independent
    License :: OSI Approved :: BSD License

[options]
packages = find:
python_requires = >=3.7
# add your package requirements here
install_requires =
    napari-plugin-engine>=0.1.4
    numpy
    napari-tools-menu>=0.1.17
    napari-time-slicer
    superqt
    imageio!=2.22.1
    napari>=0.4.11 # https://github.com/napari/napari/issues/5511
    napari-assistant>=0.4.7
    scikit-learn

[options.entry_points] 
napari.plugin =
    napari-rf-classification = napari_rf_classification
